<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyPortofolio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSpotifyStreamer"
            style="@style/ButtonStyle"
            android:onClick="sendMessage"
            android:text="@string/SpotifyStreamerButtonName" />

        <Button
            android:id="@+id/btnScores"
            style="@style/ButtonStyle"
            android:onClick="sendMessage"
            android:text="@string/ScoresButtonName" />

        <Button
            android:id="@+id/btnLibrary"
            style="@style/ButtonStyle"
            android:onClick="sendMessage"
            android:text="@string/LibraryButtonName" />

        <Button
            android:id="@+id/btnBuildItBrigger"
            style="@style/ButtonStyle"
            android:onClick="sendMessage"
            android:text="@string/BuildItBiggerButtonName" />

        <Button
            android:id="@+id/btnXYZReader"
            style="@style/ButtonStyle"
            android:onClick="sendMessage"
            android:text="@string/XYZReaderButtonName" />

        <Button
            android:id="@+id/btnCapstone"
            style="@style/ButtonStyle"
            android:onClick="sendMessage"
            android:text="@string/CapstoneButtonName" />
    </LinearLayout>
</RelativeLayout>
